--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,9 @@
 <body>
     <header class="bg-dark text-white">
         <div class="d-flex flex-wrap   justify-content-lg-start" id="main-header">
+            <form id = "formLogout" th:action="@{/logout}" method="post">
+                <input id = "inputLogout" type="submit" value="Выход"/>
+            </form>
             <h1>Settings for system</h1>
         </div>
     </header>
@@ -275,13 +278,29 @@
             </div>
 
         </aside>
-
-
-
     </div>
-    <script type="text/javascript" th:src="@{jsFiles/objectRedactor.js}"></script>
-    <script type="text/javascript" th:src="@{jsFiles/getRequests.js}"></script>
-    <script type="text/javascript" th:src="@{jsFiles/patchRequests.js}"></script>
-    <script type="text/javascript" th:src="@{jsFiles/updateRealParamInClient.js}"></script>
+    <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/objectRedactor.js}"></script>
+    <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/getRequests.js}"></script>
+    <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/patchRequests.js}"></script>
+    <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/updateRealParamInClient.js}"></script>
+    <script th:inline="javascript" type="text/javascript" th:src="@{jsFilesForUsersSettings/userRequests.js}"></script>
+    <script th:inline="javascript" type="text/javascript" th:src="@{jsFilesForUsersSettings/showSettingsWindow.js}"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        const roleJson = /*[[${role}]]*/ 'default';
+        window.role = roleJson[0].authority;
+        /*]]>*/
+        switch (window.role){
+            case "ROLE_ADMIN":
+                addButtonOpenWindowUserSettings();
+                break;
+            case "ROLE_WORKER":
+                break;
+            case "ROLE_USER":
+                document.getElementById("updateParamBtn").disabled = true;
+                break;
+        }
+
+    </script>
 </body>
 </html>
