--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,6 +73,23 @@
             <br>
             <div class="param-setting">
                 <div class="name-param">
+                    <span  class="text-center" >Температура на улице</span>
+                </div>
+                <div class="window-param">
+                    <span id="temperatureAirStreetReal" class="text-center">20.5Т</span>
+                </div>
+            </div>
+            <div class="param-setting">
+                <div class="name-param">
+                    <span  class="text-center" >Влажность на улице</span>
+                </div>
+                <div class="window-param">
+                    <span id="humidityAirStreetReal" class="text-center">20.5Т</span>
+                </div>
+            </div>
+            <br>
+            <div class="param-setting">
+                <div class="name-param">
                     <span class="text-center" >Мощность приточного ветилятора</span>
                 </div>
                 <div class="window-param" onclick="openParamSettings(this,'Мощность приточного ветилятора')">
