change humidity model and all other2

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -106,7 +106,7 @@
                 <div class="name-param">
                     <span class="text-center"> Влажность почвы</span>
                 </div>
-                <div class="window-param" onclick="openParamSettings(this,'Влажность почвы')">
+                <div class="window-param" onclick="openParamSettingsWithLowHigh(this,'Влажность почвы')">
                     <span id = "humiditySoilReal" class="text-center">20.0Т</span>
                 </div>
                 <div class="mode-char">
@@ -146,7 +146,7 @@
                 <div class="name-param">
                     <span class="text-center" > Влажность воздуха</span>
                 </div>
-                <div class="window-param" onclick="openParamSettings(this,'Влажность воздуха')">
+                <div class="window-param" onclick="openParamSettingsWithLowHigh(this,'Влажность воздуха')">
                     <span id = "humidityAirReal" class="text-center">20.5Т</span>
                 </div>
                 <div class="mode-char">
