--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -1,5 +1,3 @@
-
-
 body{background-image: url("../images/main.jpg");
     min-height: 100%;
     background-repeat: no-repeat;
@@ -58,12 +56,6 @@ header{
 #col-side-all-zones span{
     font-size: 1.05dvw;
 }
-
-
-
-
-
-
 
 .param-setting{
     margin-top: 1dvh;
@@ -125,6 +117,8 @@ header{
     margin-right: 4dvw;
     font-size: 1dvw;
     border-style: solid;
+    border-radius: 5px;
+    border-bottom-width: thin;
 }
 
 #updateParamBtn{
@@ -134,7 +128,7 @@ header{
     background-color: #313031;
     border-bottom-style: solid;
     border-radius: 5px;
-    border-bottom-width: 1px;
+    border-bottom-width: thin;
 }
 
 #btnWithIcon{
@@ -267,6 +261,7 @@ btnsWindowUserChange{
 #paramName{
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 90%;
 }
 
@@ -286,23 +281,18 @@ btnsWindowUserChange{
 }
 
 .header{
-    position: relative;
-    margin-bottom: 10px;
-    width: 95%;
-
+    display: flex;
+    width: 100%;
 }
 
 
 #close-btn:hover{
-    color: #cf191e;
+    color: #fd0007;
 }
 
 #close-btn{
-    color: #3b3b3b;
-    position: absolute;
-    left: 94%;
-    top: -1dvh;
-    font-size: 1.44dvw;
+    color: #ca2a2a;
+    font-size: 150%;
     border-style: none;
     background-color: rgba(212,39,39,0);
 }
@@ -328,6 +318,7 @@ btnsWindowUserChange{
     width: 55%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 #formSelect{
     font-size: 1dvw;
@@ -337,7 +328,7 @@ btnsWindowUserChange{
 }
 .mode{
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 #inputTask{
@@ -367,6 +358,7 @@ btnsWindowUserChange{
 
 #errorSpan{
     color: #cf191e;
+    text-align: center;
 }
 
 
@@ -374,6 +366,7 @@ btnsWindowUserChange{
     width: 55%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .task{
     display: flex;
@@ -393,7 +386,7 @@ btnsWindowUserChange{
     border-radius: 2dvh;
     border-style: solid;
     border-color: navy;
-    border-width: 0.4dvh;
+    border-width: 0.1dvh;
 }
 
 
@@ -428,96 +421,3 @@ btnsWindowUserChange{
     background-color: #212529;
     border-radius: 20px;
 }
-
-
-/*
-@media (max-width: 768px) {
-    body {
-        background-size: auto;
-    }
-
-    #main-header h1 {
-        font-size: 3dvh;
-    }
-
-    header {
-        height: auto;
-        padding: 1dvh 2dvw;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    #btnOpenWindowSettignsUser, #formLogout {
-        width: 100%;
-        margin: 1dvh 0;
-        font-size: 2dvh;
-    }
-
-    #inputLogout {
-        font-size: 2dvh;
-    }
-
-    .col-side-all-zones {
-        width: 90dvw; 
-        font-size: 2dvh;
-        margin: 1dvh auto;
-    }
-
-    #paramSettings, #paramSettingsWithoutMode {
-        width: 90dvw;
-        font-size: 2dvh;
-        position: absolute;
-        margin: 1dvh auto;
-    }
-
-    #windowUsersSettings {
-        width: 95dvw;
-        height: auto;
-        top: 5dvh;
-        left: 2.5dvw;
-    }
-
-    #tableContainer {
-        font-size: 2dvh;
-    }
-
-    .param-setting{
-        display: flex;
-    }
-
-    #windowUserCreate, #windowUserChange {
-        width: 90dvw;
-        left: 5dvw;
-    }
-
-    #close-btn, #close-btn-for-usersSetting {
-        font-size: 3dvh;
-        left: 90%;
-    }
-
-    .window-param {
-        width: 45%;
-        font-size: 2dvh;
-    }
-
-    #list-zones {
-        max-height: 60dvh;
-    }
-
-    #objectSettingsDiv {
-        width: 95dvw;
-        margin-left: 2.5dvw;
-    }
-
-    .name-param{
-        text-align: center;
-    }
-
-    .mode-char{
-        font-size: 2dvh;
-    }
-
-    .mode-char, #col-side-all-zones span, .name-param, #textMode, #formSelect, #inputTask, #textTask {
-        font-size: 2dvh;
-    }
-}*/
