--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -24,8 +24,9 @@ header{
 }
 
 .mode-char{
+    vertical-align: middle;
     display: inline-block;
-    font-size: 1.4dvw;
+    font-size: 150%;
     color: #cf191e;
 }
 
@@ -72,7 +73,7 @@ header{
 #paramSettings{
     overflow: auto;
     text-align: center;
-    font-size: 1.2dvw;
+    font-size: 150%;
     background-color: #9dd2fffa;
     padding: 0.3%;
     width: 22%;
@@ -314,17 +315,16 @@ btnsWindowUserChange{
 }
 
 #textMode{
-    font-size: 1.2dvw;
     width: 55%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #formSelect{
-    font-size: 1dvw;
     width: 40%;
     display: flex;
     justify-content: center;
+    background-size: 15%;
 }
 .mode{
     display: flex;
@@ -332,7 +332,6 @@ btnsWindowUserChange{
 }
 
 #inputTask{
-    font-size: 1dvw;
     width: 40%;
     display: flex;
     justify-content: center;
@@ -340,7 +339,6 @@ btnsWindowUserChange{
 }
 
 #inputTaskLow{
-    font-size: 1dvw;
     width: 40%;
     display: flex;
     justify-content: center;
@@ -348,7 +346,6 @@ btnsWindowUserChange{
 }
 
 #inputTaskHigh{
-    font-size: 1dvw;
     width: 40%;
     display: flex;
     justify-content: center;
@@ -383,10 +380,10 @@ btnsWindowUserChange{
     display: inline-block;
     text-align: center;
     background: black;
-    border-radius: 2dvh;
+    border-radius: 10%;
     border-style: solid;
     border-color: navy;
-    border-width: 0.1dvh;
+    border-width: thin;
 }
 
 
