--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
             <form id = "formLogout" th:action="@{/logout}" method="post">
                 <input id = "inputLogout" type="submit" value="Выход"/>
             </form>
-            <h1>Settings for system</h1>
+            <h1>Управление теплицей</h1>
         </div>
     </header>
     <div class="row" id="fullWindow">
