--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -1,5 +1,12 @@
+html{
+    width: 100%;
+    height: 100%;
+}
+
 body{background-image: url("../images/main.jpg");
     min-height: 100%;
+    height: 100%;
+    width: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -9,16 +16,17 @@ body{background-image: url("../images/main.jpg");
 #main-header h1{
     margin:auto;
     vertical-align:middle;
-    font-size: 240%;
+    font-size: 160%;
 }
 
 #main-header{
-    font-size: 50%;
+    font-size: 90%;
 }
 
 header{
-    width: 100dvw;
-    height: auto;
+    width: 100%;
+    height: 7%;
+    align-items: center;
 }
 
 .row{
@@ -128,7 +136,7 @@ header{
     background-color: #313031;
     border-bottom-style: solid;
     border-radius: 5px;
-    border-bottom-width: thin;
+    border-width: inherit;
 }
 
 #btnWithIcon{
