--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -26,7 +26,7 @@ body{background-image: url("../images/main.jpg");
 header{
     width: 100%;
     height: 7%;
-    align-items: center;
+    display: grid;
 }
 
 .row{
